2011-11-07  Andreas Kling  <kling@webkit.org>

        Unreviewed Windows build fix after r99468.

        * css/CSSPrimitiveValue.h: Unmark single-argument constructors
        as explicit, since this conflicts with the template constructors
        in CSSPrimitiveValueMappings.h.

2011-11-07  Jer Noble  <jer.noble@apple.com>

        Build fix due to a erroneous search-and-replace.

        Unreviewed build fix.

        Replace all instances of GenericClock with ClockGeneric.

        * WebCore.xcodeproj/project.pbxproj:
        * platform/ClockGeneric.cpp:
        (ClockGeneric::ClockGeneric):

2011-11-07  Adam Barth  <abarth@webkit.org>

        Move parseSandboxPolicy to SecurityContext
        https://bugs.webkit.org/show_bug.cgi?id=71732

        Reviewed by Eric Seidel.

        As requested by Eric, this patch resolves a layering inversion.  Now
        that we have SecurityContext to hold the sandbox bits and the origin,
        it's a logical place to put the parser for sandbox policies.

        * dom/SecurityContext.cpp:
        (WebCore::SecurityContext::parseSandboxPolicy):
        * dom/SecurityContext.h:
        * html/HTMLIFrameElement.cpp:
        (WebCore::HTMLIFrameElement::parseMappedAttribute):
        * page/ContentSecurityPolicy.cpp:
        (WebCore::ContentSecurityPolicy::applySandboxPolicy):
        * page/SecurityOrigin.cpp:
        * page/SecurityOrigin.h:

2011-11-07  Jer Noble  <jer.noble@apple.com>

        Rename PlatformClockPOSIX -> ClockGeneric, and use WTF::currentTime() for its timing source.
        https://bugs.webkit.org/show_bug.cgi?id=71702

        Reviewed by Sam Weinig.

        No new tests; covered by existing tests.

        * platform/Clock.cpp:
        (Clock::create):
        * platform/ClockGeneric.cpp: Renamed from Source/WebCore/platform/posix/PlatformClockPOSIX.cpp.
        (ClockGeneric::ClockGeneric):
        (ClockGeneric::setCurrentTime):
        (ClockGeneric::currentTime):