@@ -1,3 +1,13 @@
+2011-11-07  Alice Boxhall  <aboxhall@chromium.org>
+
+        Remove unnecessary use of function pointer in FrameSelection::modify()
+        https://bugs.webkit.org/show_bug.cgi?id=71646
+
+        Reviewed by Ryosuke Niwa.
+
+        * editing/FrameSelection.cpp:
+        (WebCore::FrameSelection::modify):
+
 2011-11-07  Andreas Kling  <kling@webkit.org>
 
         Unreviewed Windows build fix after r99468.
